--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="Angel Spinazzola" />
-    <meta property="og:image" content="./assets/images/portfolio-ico.png" />
+    <meta property="og:image" content="https://angelspinazzola.github.io/portfolio-angel/assets/images/portfolio-ico.png" />
+    <meta property="og:url" content="https://angelspinazzola.github.io/portfolio-angel/" />
+    <meta property="og:type" content="website" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
