--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta property="og:title" content="Portfolio" />
-    <meta property="og:description" content="Angel Spinazzola" />
+    <meta property="og:description" content="Portfolio de Angel Spinazzola" />
     <meta property="og:image" content="https://angelspinazzola.github.io/portfolio-angel/assets/images/portfolio-ico.png" />
     <meta property="og:url" content="https://angelspinazzola.github.io/portfolio-angel/" />
     <meta property="og:type" content="website" />
