--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero" id="inicio">
         <div class="hero-content">
             <div class="profile-image-container">
-                <img src="/assets/images/angel.jpg" alt="Tu Nombre" class="profile-image" />
+                <img src="assets/images/angel.jpg" alt="Tu Nombre" class="profile-image" />
                 <div class="profile-image-bg"></div>
             </div>
             <div class="hero-text-content">
@@ -36,23 +36,24 @@
                 <h2 class="hero-subtitle">Desarrollador Back-end</h2>
                 <p class="hero-text">Creo experiencias digitales excepcionales que combinan diseño y funcionalidad.
                     Especializado en desarrollo web moderno y diseño de interfaces de usuario.</p>
-                    <div class="social-links">
-                        <a href="https://www.linkedin.com/in/angel-spinazzola/" class="social-link" target="_blank"
-                            rel="noopener noreferrer">
-                            <i class="fab fa-linkedin"></i>
-                            <span>LinkedIn</span>
-                        </a>
-                        <a href="https://github.com/AngelSpinazzola" class="social-link" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-github"></i>
-                            <span>GitHub</span>
-                        </a>
-                        <a href="https://wa.me/+541123921192" class="social-link" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-whatsapp"></i>
-                            <span>WhatsApp</span>
-                        </a>
-                    </div>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/angel-spinazzola/" class="social-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-linkedin"></i>
+                        <span>LinkedIn</span>
+                    </a>
+                    <a href="https://github.com/AngelSpinazzola" class="social-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-github"></i>
+                        <span>GitHub</span>
+                    </a>
+                    <a href="https://wa.me/+541123921192" class="social-link" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-whatsapp"></i>
+                        <span>WhatsApp</span>
+                    </a>
+                </div>
             </div>
-            
+
         </div>
     </section>
 
@@ -86,35 +87,35 @@
         <h2 class="section-title">Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
-                <img src="/assets/icons/logo-c-sharp.png" alt="c#" loading="lazy" class="icon-card" />
+                <img src="assets/icons/logo-c-sharp.png" alt="c#" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">C#</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/logo-net.png" alt="net" loading="lazy" class="icon-card" />
+                <img src="assets/icons/logo-net.png" alt="net" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">.NET</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/MySQL.png" alt="mysql" loading="lazy" class="icon-card" />
+                <img src="assets/icons/MySQL.png" alt="mysql" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">MySQL</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/sql-server.png" alt="sql-server" loading="lazy" class="icon-card" />
+                <img src="assets/icons/sql-server.png" alt="sql-server" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">SQL Server</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/html.png" alt="html" loading="lazy" class="icon-card" />
+                <img src="assets/icons/html.png" alt="html" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">Html</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/css.png" alt="css" loading="lazy" class="icon-card" />
+                <img src="assets/icons/css.png" alt="css" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">Css</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/bootstrap-logo-shadow.png" alt="bootstrap" loading="lazy" class="icon-card" />
+                <img src="assets/icons/bootstrap-logo-shadow.png" alt="bootstrap" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">Bootstrap</h3>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/logo-js.png" alt="js" loading="lazy" class="icon-card" />
+                <img src="assets/icons/logo-js.png" alt="js" loading="lazy" class="icon-card" />
                 <h3 class="skill-name">JavaScript</h3>
             </div>
         </div>
