--- a/index.html
+++ b/index.html
@@ -60,20 +60,38 @@
     <section class="projects" id="proyectos">
         <h2 class="section-title section-title-icon">
             <span>
-                <img src="/assets/icons/code-512.webp" alt="skills icon" class="icon-project" />
+                <img src="assets/icons/code-512.webp" alt="skills icon" class="icon-project" />
             </span>
             Proyectos
         </h2>
         <div class="project-grid">
             <div class="project-card">
-                <div class="project-image"></div>
-                <h3>Proyecto 1</h3>
-                <p>Descripción del proyecto y tecnologías utilizadas.</p>
+                <div class="project-card-inner">
+                    <div class="project-card-front">
+                        <img src="assets/images/sanguisUno.png" alt="Proyecto 1" class="project-image">
+                        <h3>Sanguis</h3>
+                    </div>
+                    <div class="project-card-back">
+                        <p>App web para donar sangre con sistema de login por roles de filial o donante.</p>
+                        <div class="project-details">
+                            <h4>Tecnologías utilizadas:</h4>
+                            <ul>
+                                <li>ASP.NET WebForms</li>
+                                <li>Bootstrap</li>
+                                <li>SQL Server</li>
+                            </ul>
+                            <div class="project-links">
+                                <a href="https://github.com/AngelSpinazzola/TPC-Equipo-8" target="_blank"><i class="fab fa-github"></i> Código</a>
+                                <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="project-card">
-                <div class="project-image"></div>
-                <h3>Proyecto 2</h3>
-                <p>Descripción del proyecto y tecnologías utilizadas.</p>
+                <img src="assets/images/appWinform.png" alt="Proyecto 2" class="project-image">
+                <h3>Sistema de gestión de artículos</h3>
+                <p>App de escritorio desarrollada con .NET Winforms, SQL Server</p>
             </div>
             <div class="project-card">
                 <div class="project-image"></div>
