--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h3>Sanguis</h3>
                     </div>
                     <div class="project-card-back">
-                        <p>App web para donar sangre con sistema de login por roles de filial o donante.</p>
+                        <p>App web para donar sangre con login por roles de donante/filial.</p>
                         <div class="project-details">
                             <h4>Tecnologías utilizadas:</h4>
                             <ul>
@@ -89,9 +89,25 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="assets/images/appWinform.png" alt="Proyecto 2" class="project-image">
-                <h3>Sistema de gestión de artículos</h3>
-                <p>App de escritorio desarrollada con .NET Winforms, SQL Server</p>
+                <div class="project-card-inner">
+                    <div class="project-card-front">
+                        <img src="assets/images/appWinform.png" alt="Proyecto 2" class="project-image">
+                        <h3>Sistema de gestión</h3>
+                    </div>
+                    <div class="project-card-back">
+                        <p>App de escritorio que gestiona el inventario de artículos</p>
+                        <div class="project-details">
+                            <h4>Tecnologías utilizadas:</h4>
+                            <ul>
+                                <li>.NET WinForms</li>
+                                <li>SQL Server</li>
+                            </ul>
+                            <div class="project-links">
+                                <a href="https://github.com/AngelSpinazzola/tp-winform-equipo-8" target="_blank"><i class="fab fa-github"></i> Código</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="project-card">
                 <div class="project-image"></div>
