--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     
             <article class="proyectos-item">
                 <figure>
-                    <img src="assets/images/appwinform.png" alt="Sistema de gestión" class="img-proyectos">
+                    <img src="assets/images/appwinform.jpg" alt="Sistema de gestión" class="img-proyectos">
                 </figure>
                 <div class="proyectos-texto">
                     <h3 class="proyecto-h3">Sistema de Gestión</h3>
