--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
             </div>
             <div class="hero-text-content">
                 <h2 class="hero-title"><br>Angel Spinazzola</h2>
-                <h2 class="hero-subtitle">Desarrollador Back-end</h2>
-                <p class="hero-text">Creo experiencias digitales excepcionales que combinan diseño y funcionalidad.
-                    Especializado en desarrollo web moderno y diseño de interfaces de usuario.</p>
+                <h2 class="hero-subtitle">Desarrollador Back-End</h2>
+                <p class="hero-text">Especializado en .NET, APIs RESTful, ASP.NET MVC y bases de datos, con un enfoque en código limpio y arquitecturas eficientes para proyectos escalables.</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/angel-spinazzola/" class="social-link" target="_blank"
                         rel="noopener noreferrer">
@@ -72,7 +71,7 @@
                         <li class="habilidad-item color-bootstrap">Bootstrap</li>
                     </ul>
                     <p class="proyectos-texto-p">
-                        Aplicación Web para gestionar donaciones de sangre con sistema de roles que permite administrar donantes, reservas y seguimiento de donaciones.
+                        Aplicación Web en ASP.NET WebForms para gestionar donaciones de sangre con sistema de roles que permite administrar donantes, reservas y seguimiento de donaciones.
                     </p>
                     <div class="buttons-codigo">
                         <a href="https://github.com/AngelSpinazzola/TPC-Equipo-8" target="_blank" class="buttons-codigo-item">
@@ -119,7 +118,7 @@
                         <li class="habilidad-item color-mvc">MVC</li>
                     </ul>
                     <p class="proyectos-texto-p">
-                        Aplicación web que permite crear, leer, actualizar y eliminar registros de Empleados, desarrollada con ASP.NET 8 MVC.
+                        Aplicación web que permite crear, leer, actualizar y eliminar registros de empleados desarrollada con ASP.NET 8 MVC.
                     </p>
                     <div class="buttons-codigo">
                         <a href="https://github.com/AngelSpinazzola/CrudMVCEntity" target="_blank" class="buttons-codigo-item">
