--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
         <div class="proyectos-contenedor">
             <article class="proyectos-item">
                 <figure>
+                    <img src="assets/images/api-login-jwt.jpg" alt="API de Autenticación JWT" class="img-proyectos">
+                </figure>
+                <div class="proyectos-texto">
+                    <h3 class="proyecto-h3">API de Autenticación JWT</h3>
+                    <ul class="proyectos-tecnologias">
+                        <li class="habilidad-item color-net">.NET 8</li>
+                        <li class="habilidad-item color-entity">Entity Framework</li>
+                        <li class="habilidad-item color-mysql">SQL Server</li>
+                        <li class="habilidad-item color-swagger">Swagger</li>
+                    </ul>
+                    <p class="proyectos-texto-p">
+                        API desarrollada en ASP.NET Core para autenticación de usuarios utilizando JWT (JSON Web Tokens). Incluye registro, login y gestión de usuarios, con documentación automática generada por Swagger. La API está disponible en GitHub y puede probarse localmente siguiendo las instrucciones del repositorio.
+                    </p>
+                    <div class="buttons-codigo">
+                        <a href="https://github.com/AngelSpinazzola/JwtAuthApi" target="_blank" class="buttons-codigo-item">
+                            <i class="bi bi-github"></i> Ver código
+                        </a>
+                        <a href="https://github.com/AngelSpinazzola/JwtAuthApi#api-de-autenticaci%C3%B3n-jwt-con-net-8" target="_blank" class="buttons-codigo-item">
+                            <i class="bi bi-book"></i> Ver README
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <article class="proyectos-item">
+                <figure>
                     <img src="assets/images/sanguis.png" alt="Sanguis" class="img-proyectos">
                 </figure>
                 <div class="proyectos-texto">
